navbar overflow links and hero section fixed

--- a/app/assets/styles/modules/_navbar.css
+++ b/app/assets/styles/modules/_navbar.css
@@ -1,11 +1,11 @@
 .navbar {
 
-	/*@extend %max-width-center;*/
 	position: fixed;
-	position: relative;
 	height: 60px;
+	width: 100%;
 	background-color: $primary-white;
 	box-shadow: 0 1rem 3rem rgba($primary-dark, .1);
+	z-index: 9999999;
 
 	&__center {
 		@mixin atLarge {
@@ -120,7 +120,7 @@
 			display: none;
 			animation: growDown 300ms ease-in-out forwards;
 			transform-origin: top center;
-			
+
 			@mixin atLarge {
 				/*margin-top: 6px;*/
 				position: absolute;
